# bitfinex-extractor-influxdb

./: .env  .env.sample  .prospector.yaml  .travis.yml  LICENSE  README.md  README.rst  requirements.txt  requirements_build.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
bitfinex-extractor-influxdb/: __init__.py
bitfinex_extractor_influxdb/: __init__.py  config.yaml  error_codes.py  exchange_db_sync.py  hola.py  multiple_stocks_sync.py
docs/: bitfinex_extractor_influxdb.rst  conf.py  index.rst  make.bat  modules.rst
tests/: bitfinex_response_candle.p  bitfinex_response_limit_error.p  last_sample_query.p  test_multiple_stocks_sync.py  test_sample.py
