[bumpversion]
current_version = 0.3.0
commit = False
tag = False

[metadata]
package_name = bitfinex-extractor-influxdb
description_file = README.md
python_version = 3.8

[bdist_wheel]
universal = 0

[wheel]
plat-name = any

[bumpversion:file:bitfinex_extractor_influxdb/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:setup.py]
search = {current_version}
replace = {new_version}

[tool:pytest]
minversion = 3
addopts = -v
norecursedirs = 
	*settings*
	*urls*
	.tox*
	run*
	*docs*
	.virtualenvs*

[tool:pytest:extra]
addopts = -n4 --cov=bitfinex-extractor-influxdb

[tool:pytest:debug]
addopts = 

[coverage:run]
source = .
branch = True
omit = 
	*settings*
	*__init__.py
	*urls*
	.tox*
	*tests*
	run*
	*docs*
	setup.py

[coverage:report]
show_missing = True
ignore_errors = True
fail_under = 95
exclude_lines = 
	pragma: no cover
	noqa
	
	raise AssertionError
	raise NotImplementedError
	
	if 0:
	if __name__ == .__main__.:
	
	def __repr__
	if self\.debug
	if settings\.DEBUG

[coverage:paths]
source = ./

[coverage:html]
directory = .test_report/coverage_html/

[coverage:xml]
output = .test_report/coverage.xml
