[bumpversion]
current_version = 0.6.0
commit = False
tag = False

[metadata]
package_name = bitfinex-extractor-influxdb
description_file = README.md
python_version = 3.8

[bdist_wheel]
universal = 0

[wheel]
plat-name = any

[bumpversion:file:bitfinex_extractor_influxdb/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:setup.py]
search = {current_version}
replace = {new_version}
